--- a/views/index.ejs
+++ b/views/index.ejs
@@ -112,7 +112,7 @@
         <main class="px-3">
       
           <h1 class="custom-heading">Hello <%=name %> </h1>
-          <p class="lead custom-lead">Welcome to my first NodeJs App</p>
+          <p class="lead custom-lead">Welcome to the IT Industry</p>
           <p class="lead">
             <a href="#" class="btn btn-lg btn-secondary fw-bold text-dark border-white bg-white">Learn more</a>
           </p>
